--- a/compose.yml
+++ b/compose.yml
@@ -34,11 +34,12 @@ services:
     environment:
       DISC_MSG_STORE_SERVER_DB_JDBC_URL: jdbc:postgresql://postgres:5432/disc-msg-store-server
       DISC_MSG_STORE_SERVER_DB_PASSWORD: ${DISC_MSG_STORE_SERVER_DB_PASSWORD}
+      DISC_MSG_STORE_SERVER_API_BASE_URL: ${DISC_MSG_STORE_SERVER_API_BASE_URL}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/actuator/health"]
       interval: 2s
       timeout: 1s
-      retries: 5
+      retries: 10
 
   discord-message-store-client:
     image: ghcr.io/ayussh-verma/discord-message-store-client:latest
@@ -48,7 +49,7 @@ services:
       discord-message-store-server:
         condition: service_healthy
     environment:
-      DISC_MSG_STORE_CLIENT_API_BASE_URL: http://discord-message-store-server:8100
+      DISC_MSG_STORE_CLIENT_API_BASE_URL: http://discord-message-store-server:80
       DISC_MSG_STORE_CLIENT_BOT_TOKEN: ${DISC_MSG_STORE_CLIENT_BOT_TOKEN}
       DISC_MSG_STORE_CLIENT_BOT_GUILD_ID: ${DISC_MSG_STORE_CLIENT_BOT_GUILD_ID}
 
