--- a/dev/server.yml
+++ b/dev/server.yml
@@ -2,6 +2,7 @@ services:
   discord-message-store-server:
     build: ./discord-message-store
     pull_policy: build
+    restart: "no"
     develop:
       watch:
         - path: ./discord-message-store/src/main/
@@ -13,4 +14,5 @@ services:
         #   action: rebuild
     environment:
       SPRING_PROFILES_ACTIVE: dev,override
+      DISC_MSG_STORE_SERVER_API_BASE_URL: ${DISC_MSG_STORE_SERVER_API_BASE_URL:-http://localhost:8100}
       DISC_MSG_STORE_SERVER_PORT: 80
