--- a/compose.yml
+++ b/compose.yml
@@ -20,12 +20,14 @@ services:
       POSTGRES_DB: disc-msg-store-server
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U disc-msg-store-server"]
-      interval: 2s
       timeout: 1s
+      start_period: 10s
+      start_interval: 0.5s
+      interval: 2s
       retries: 5
 
   discord-message-store-server:
-    image: ghcr.io/ayussh-verma/discord-message-store-server:latest
+    image: ghcr.io/ayussh-verma/discord-message-store:latest
     logging: *default-logging
     restart: *default-restart
     depends_on:
@@ -35,11 +37,15 @@ services:
       DISC_MSG_STORE_SERVER_DB_JDBC_URL: jdbc:postgresql://postgres:5432/disc-msg-store-server
       DISC_MSG_STORE_SERVER_DB_PASSWORD: ${DISC_MSG_STORE_SERVER_DB_PASSWORD}
       DISC_MSG_STORE_SERVER_API_BASE_URL: ${DISC_MSG_STORE_SERVER_API_BASE_URL}
+      THC_PATH: /actuator/health
+      THC_PORT: 80
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/actuator/health"]
-      interval: 2s
+      test: ["CMD", "/workspace/health-check"]
       timeout: 1s
-      retries: 10
+      start_period: 20s
+      start_interval: 0.5s
+      interval: 2s
+      retries: 5
 
   discord-message-store-client:
     image: ghcr.io/ayussh-verma/discord-message-store-client:latest
